fix spacing

--- a/index.css
+++ b/index.css
@@ -950,7 +950,7 @@ section {
     }
 
     .leveraging-section-wrapper2.block-reverse {
-        padding: 0 0 4rem;
+        padding: 1rem 0 4rem;
     }
 
     .leveraging-block .per-image-special {
